# transcription-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  transcriptions.db
backend/app/: main.py
backend/app/core/: config.py  whisper.py
backend/app/db/: database.py  models.py  operations.py
backend/app/routes/: search.py  transcribe.py  transcriptions.py
backend/app/schemas/: transcriptions.py
backend/app/service/: transcriber.py
backend/tests/: conftest.py  test_server.py
backend/tests/routes/: test_search.py  test_transcribe.py  test_transcriptions.py
