[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Example",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "transformers (>=4.53.0,<5.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pysoundfile (>=0.9.0.post1,<0.10.0)",
    "openai-whisper (>=20250625,<20250626)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

